src/components/HumanCapitalSolutions.css
/* Fullscreen Image Section */
.fullscreen-image {
    background-image: url("../assests/images/HumanCapitalSolutions.png");
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 75vh;
    position: relative;
  }
  
  .floating-text {
    position: absolute;
    bottom: 35%;
    left: 25%;
    transform: translateX(-50%);
    text-align: left;
    color: #0056c3;
    background: #ffffffe5; /* Semi-transparent background */
    padding: 20px;
    border-radius: 16px;
  }
  
  .floating-title {
    font-size: 44px !important;
    font-family: sans-serif !important;
  }
  
  .floating-subtitle {
    color: #0056c3 !important;
    font-weight: 600 !important;
    font-size: 42px !important;
    width: 560px !important;
    font-family: "Nunito", sans-serif !important;
  }
  
  /* Stats Section */
  .stats-section {
    background-color: #f7fcff;
    margin: 4% 2.5% !important;
    padding: 10px !important;
  }
  
  .stats-img {
    position: relative;
    width: 75%;
    height: 20vh;
    background-image: url("../assests/images/HumanCapitalSolutionsSection_2.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right center;
    left: 10%;
  }
  
  /* Button Section */
  .button-container {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-bottom: 20px;
    width: 100%;
    align-items: center;
    margin-left: 10%;
  }
  
  .custom-button {
    font-family: "Nunito", sans-serif !important;
    font-size: 24px !important;
    line-height: 30px !important;
    border-radius: 10px !important;
    text-align: center !important;
    padding: 15px !important;
    background-color: #f1f1f1 !important;
    color: #0056c3 !important;
    border: none !important;
    width: 50% !important;
    height: 80px !important;
  }
  
  .custom-button:hover {
    transform: translateY(-1px);
    box-shadow: 0px 12px 20px rgba(0, 86, 195, 0.5);
  }
  
  .custom-button.active {
    background-color: #b3e5fc !important;
    color: #0056c3 !important;
    border-bottom: 1.5px solid #0056c3 !important;
    font-weight: 750 !important;
  }
  
  /* Section 4: Image Section */
  .image-section {
    display: flex;
    flex-direction: column;
    align-items: center; 
    margin: 0; 
    padding: 0; 

  }
  
  .align-assess-img,
  .empower-develop-img {
    width: 80%; /* Make each container take up full screen width */
    text-align: center;
  }
  
  .section-image {
    width: 85%; /* Make the image take up full screen width */
    height: auto; /* Maintain aspect ratio */
    border-radius: 0; /* Remove rounded corners for a full-width effect */
    box-shadow: none; /* Remove shadow for a clean look */
    margin-top: -6% !important;


}
  
  .image-caption {
    margin-top: 10px;
    font-size: 18px;
    font-weight: bold;
    color: #0056c3;
    text-transform: uppercase; /* Optional: Make captions uppercase for emphasis */
  }

  .empower-develop-img {
    border-top: 2px dashed #b8d0f0; /* Adjust the color and width as needed */
    margin-top: -12% !important;
  }
  
  
  .why-choose-us-section {
    background-color: #f7fcff;
    padding: 10px;
    margin: 4% auto;
  }
  
  .content-box {
    display: flex;
    flex-direction: column;
    text-align: left;
    max-width: 800px;
    margin: 1% auto;
    width: 100% !important;
    }
  
  .section-heading {
    font-size: 20px !important;
    margin-bottom: 20px;
    font-family: "Nunito", sans-serif !important;
    font-weight: 700 !important;
  }
  
  .benefits-list {
    display: flex;
    flex-direction: column ;
    align-items: flex-start !important;
    justify-content:flex-start !important;
    margin :1% 0.1% !important;
    color: #333;
    width: 1000px !important;

  }
  
  .benefits-list li {
    font-size: 16px !important;
    font-family: "Nunito", sans-serif !important;
    margin-bottom: 10px;
    line-height: 1.2;
  }
  
  .cta-text {
    color: #0056C3;
    font-family: "Nunito", sans-serif !important;
    font-size: 16px !important;
    margin-bottom: 1% !important;
    font-weight: 700 !important;
  }
  

  .cta-button {
    background-color: #0DAFFC !important;
    color: #fff;
    font-size: 16px;
    border-radius: 8px !important;
    text-transform: none;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s ease-in-out, background-color 0.3s ease-in-out;
  }
  
  .cta-button:hover {
    background-color: #003e8a !important;
    transform: translateY(-2px);
  }
  


  .industries-section {
    text-align: center;
    padding: 40px;
    margin-top: -18%;
    border-radius: 10px;
    width: 50%;
    margin-bottom: -6%;

  }

  .Empower-section{
  }

  .Empower-section-image{
    width:75% !important;
    margin-left: 14%;
    margin-top: -15%;
    margin-bottom: -14%;

  }
  
  .industries-heading {
    font-size: 18px !important;
    font-weight: bold !important;
    margin-bottom: 2% !important;
  }
  
  .industries-tags {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 14px;
  }
  
  .industry-tag {
    background-color: #F1F1F1 !important;
    border-radius: 20px;
    padding: 10px 10px;
    font-size: 16px;
    color: #333;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    font-size: 14px;
    font-weight:normal !important;
    font-family:  sans-serif;

  }
  

  

